# wdai-ai-slackbot

./: .env.example  .gitignore  .safety-ignore  LICENSE.md  Procfile  README.md  bandit.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: python-checks.yml
app/: config.py  main.py
app/routes/: health.py  slack.py
app/services/: ai_service.py  file_service.py  slack_service.py
app/utils/: env_loader.py  helpers.py  pii_logger.py  rate_limiter.py
