[project]
name = "ai-slackbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "openai>=1.68.0",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "slack-sdk>=3.35.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.11.1", "types-requests>=2.32.0.20250306"]
